force-app/main/default/objects/OpportunityLineItem/fields/Adj_Type__c.field-meta.xml
<CustomField>
    <fullName>Adj_Type__c</fullName>
    <label>Adj Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True-Up</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>