force-app/main/default/objects/OpportunityLineItem/fields/Annual_Base_and_Trans__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_and_Trans__c</fullName>
    <description>Annualized Base Fee and Transaction Fee.</description>
    <inlineHelpText>Annualized Base Fee and Transaction Fee.</inlineHelpText>
    <label>Annual Base and Trans</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>