force-app/main/default/objects/OpportunityLineItem/fields/Annual_Base_Trans_Disc__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Trans_Disc__c</fullName>
    <description>Annualized Base Fee and Transaction Fee with the Discount included.</description>
    <inlineHelpText>Annualized Base Fee and Transaction Fee with the Discount included.</inlineHelpText>
    <label>Annual Base Trans Disc</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>