force-app/main/default/objects/OpportunityLineItem/fields/Annual_Discount_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Annual_Discount_Dollars__c</fullName>
    <label>Annual Discount Dollars</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>