force-app/main/default/objects/OpportunityLineItem/fields/Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee__c</fullName>
    <label>Base Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>