force-app/main/default/objects/OpportunityLineItem/fields/CPQ_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPQ External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>