force-app/main/default/objects/OpportunityLineItem/fields/Discount_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Discount_Annualized__c</fullName>
    <description>The discount (both free and percentage) annualized over the year</description>
    <inlineHelpText>The discount (both free and percentage) annualized over the year</inlineHelpText>
    <label>Discount Annualized</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>