force-app/main/default/objects/OpportunityLineItem/fields/Discount_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Discount_Free_Months__c</fullName>
    <description>The number of free months given as a discount.</description>
    <inlineHelpText>The number of free months given as a discount.</inlineHelpText>
    <label>Discount Free Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>