force-app/main/default/objects/OpportunityLineItem/fields/Discount_Months__c.field-meta.xml
<CustomField>
    <fullName>Discount_Months__c</fullName>
    <description>The number of discount months (excluding the free months)</description>
    <inlineHelpText>The number of discount months (excluding the free months)</inlineHelpText>
    <label>Discount Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>