force-app/main/default/objects/OpportunityLineItem/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>The discount percent given for the number of Discount Months</description>
    <inlineHelpText>The discount percent given for the number of Discount Months</inlineHelpText>
    <label>Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>