force-app/main/default/objects/OpportunityLineItem/fields/Discounted_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Annual_Price__c</fullName>
    <description>The discounted amount of the annual price</description>
    <inlineHelpText>The discounted amount of the annual price</inlineHelpText>
    <label>Discounted Annual Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>