force-app/main/default/objects/OpportunityLineItem/fields/External_Prod_Code3__c.field-meta.xml
<CustomField>
    <fullName>External_Prod_Code3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Prod Code3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>