force-app/main/default/objects/OpportunityLineItem/fields/Has_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Has_External_Id__c</fullName>
    <description>Does at least one of the External System Id fields have a value?</description>
    <formula>IF (OR(NOT(ISBLANK( External_System_Id__c)), NOT(ISBLANK( External_System_Id_Setup__c)), NOT(ISBLANK( External_System_Id2__c )), NOT(ISBLANK( External_System_Id3__c))), &apos;true&apos;,&apos;false&apos;)</formula>
    <inlineHelpText>Does at least one of the External System Id fields have a value?</inlineHelpText>
    <label>Has External Id</label>
    <type>Text</type>
</CustomField>