force-app/main/default/objects/OpportunityLineItem/fields/Non_Discount_Price_Per_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Non_Discount_Price_Per_Frequency__c</fullName>
    <description>The non-discounted price per frequency.</description>
    <inlineHelpText>The non-discounted price per frequency.</inlineHelpText>
    <label>Non-Discount Price Per Frequency</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>