force-app/main/default/objects/OpportunityLineItem/fields/Non_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discounted_Price__c</fullName>
    <label>Non-Discounted Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>