force-app/main/default/objects/OpportunityLineItem/fields/Non_Discounted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Discounted_Revenue__c</fullName>
    <description>The amount of revenue before the discount.</description>
    <inlineHelpText>The amount of revenue before the discount.</inlineHelpText>
    <label>Non-Discounted Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>