force-app/main/default/objects/OpportunityLineItem/fields/Non_Payroll_Unit__c.field-meta.xml
<CustomField>
    <fullName>Non_Payroll_Unit__c</fullName>
    <label>Non Payroll Unit</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>