force-app/main/default/objects/OpportunityLineItem/fields/Oppty_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Product_Id__c</fullName>
    <description>If this is an adjustment, this is the ID of the Opportunity Product that this is the adjustment from.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this is an adjustment, this is the ID of the Opportunity Product that this is the adjustment from.</inlineHelpText>
    <label>Oppty Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>