force-app/main/default/objects/OpportunityLineItem/fields/Oracle_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oracle Quote Line</label>
    <referenceTo>cafsl__Oracle_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>