force-app/main/default/objects/OpportunityLineItem/fields/Price_Per_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Frequency__c</fullName>
    <label>Price Per Frequency</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>