force-app/main/default/objects/OpportunityLineItem/fields/Price_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Price_Schedule__c</fullName>
    <description>The price schedule used to calculate this product.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The price schedule used to calculate this product.</inlineHelpText>
    <label>Price Schedule</label>
    <length>10</length>
    <type>Text</type>
</CustomField>