force-app/main/default/objects/OpportunityLineItem/fields/Product_Parent_Child_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Parent_Child_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the link record to identify if this is added as a subset of a grouping. The child id should equal the id of the product record of this line item.</description>
    <inlineHelpText>A lookup to the link record to identify if this is added as a subset of a grouping. The child id should equal the id of the product record of this line item.</inlineHelpText>
    <label>Product Parent-Child Link</label>
    <referenceTo>Product_Parent_Child_Link__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>