force-app/main/default/objects/OpportunityLineItem/fields/QuoteLineGroupAcct__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineGroupAcct__c</fullName>
    <formula>IF(
NOT(ISBLANK( Oracle_Quote_Line__c )),
Oracle_Quote_Line__r.Prospect_Client__c,
null )</formula>
    <label>QuoteLineGroupAcct</label>
    <type>Text</type>
</CustomField>