force-app/main/default/objects/OpportunityLineItem/fields/Reporting_Status__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Status__c</fullName>
    <description>Pulls the Stage from the opportunity.  If the stage contains referred, it takes that, unless it is referred commissioned which has its own value as per case 17898654.  If the stage doesn&apos;t contain referred, it just uses the opp. status.</description>
    <formula>IF (AND(OR(Opportunity.Referral__c ,CONTAINS(TEXT(Opportunity.StageName),&apos;Referred&apos;)),TEXT(Opportunity.StageName)&lt;&gt;&apos;Referred Commissioned&apos;),&quot;Referred &quot; + TEXT(Status__c),
IF (ISPICKVAL(Opportunity.StageName,&apos;Referred Commissioned&apos;),&quot;Referred Sold - Commissioned&quot;,TEXT(Status__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Status</label>
    <type>Text</type>
</CustomField>