force-app/main/default/objects/OpportunityLineItem/fields/Rev_Adj__c.field-meta.xml
<CustomField>
    <fullName>Rev_Adj__c</fullName>
    <description>Any adjustments made to the calculated revenue.</description>
    <inlineHelpText>Any adjustments made to the calculated revenue.</inlineHelpText>
    <label>Rev Adj</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>