force-app/main/default/objects/OpportunityLineItem/fields/Rev_Adj_Calcd__c.field-meta.xml
<CustomField>
    <fullName>Rev_Adj_Calcd__c</fullName>
    <description>If the revenue has to be adjusted from the price by the calculation, this is the value it is adjusting.</description>
    <inlineHelpText>If the revenue has to be adjusted from the price by the calculation, this is the value it is adjusting.</inlineHelpText>
    <label>Rev Adj Calcd</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>