force-app/main/default/objects/OpportunityLineItem/fields/Rollup_Product__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollup Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>