force-app/main/default/objects/OpportunityLineItem/fields/Setup_Fee_Original__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Original__c</fullName>
    <description>The original setup fee that defaulted to the user.</description>
    <inlineHelpText>The original setup fee that defaulted to the user.</inlineHelpText>
    <label>Setup Fee Original</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>