force-app/main/default/objects/OpportunityLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of this product record.</description>
    <inlineHelpText>The status of this product record.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create - Received</fullName>
            </value>
            <value>
                <fullName>Create - Qualified</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Pending - Submitted to VSS</fullName>
            </value>
            <value>
                <fullName>Sold - Submitted to FSS</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Sold - Submitted</fullName>
            </value>
            <value>
                <fullName>Sold - Started</fullName>
            </value>
            <value>
                <fullName>Sold - Commissioned</fullName>
            </value>
            <value>
                <fullName>Not Sold</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Referred Not Sold</fullName>
            </value>
            <value>
                <fullName>Referred Sold</fullName>
            </value>
            <value>
                <fullName>Referred Submitted</fullName>
            </value>
            <value>
                <fullName>Referred Started</fullName>
            </value>
            <value>
                <fullName>Referred Commissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>