force-app/main/default/objects/OpportunityLineItem/fields/Total_Calced__c.field-meta.xml
<CustomField>
    <fullName>Total_Calced__c</fullName>
    <description>The Total calced by the process. Can be used to determine if total was overwritten by the rep.</description>
    <inlineHelpText>The Total calced by the process.</inlineHelpText>
    <label>Total Calced</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>