force-app/main/default/objects/OpportunityLineItem/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <description>The portion of the price that is based on transactions.</description>
    <inlineHelpText>The portion of the price that is based on transactions.</inlineHelpText>
    <label>Transaction Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>