force-app/main/default/objects/OpportunityLineItem/fields/User_Override__c.field-meta.xml
<CustomField>
    <fullName>User_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the user has overridding the syncing of the date and status from the Opportunity. If this is checked, those field will not be updated automatically.</description>
    <inlineHelpText>This indicates that the user has overridding the syncing of the date and status from the Opportunity. If this is checked, those field will not be updated automatically.</inlineHelpText>
    <label>User Override</label>
    <type>Checkbox</type>
</CustomField>