force-app/main/default/objects/OpportunityLineItem/validationRules/Need_to_select_a_Prodct.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_to_select_a_Prodct</fullName>
    <active>false</active>
    <errorConditionFormula>BEGINS(  Product2.Name, &quot;Unknown&quot;) &amp;&amp; 
 (Estimated_Revenue__c &gt;0 ||  TotalPrice &gt;0)
&amp;&amp;NOT(BEGINS($Profile.Name,&apos;System Admin&apos;))</errorConditionFormula>
    <errorMessage>you cannot select unknown as the only product</errorMessage>
</ValidationRule>